# whisper-net

./: README.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_alter_post_id.py
backend/whispernet/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/posts/: route.ts
frontend/src/app/api/posts/detail/[id]/: route.ts
frontend/src/app/api/posts/ids/: route.ts
frontend/src/common/: interfaces.tsx  urls.tsx
frontend/src/components/PostItem/: PostItem.tsx
frontend/src/components/PostList/: PostList.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Navigation.tsx
