[tool.poetry]
name = "whisper-net-backend"
version = "0.1.0"
description = ""
authors = ["wisteriahuman <wisteriahuman91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
